# printfc

./: CMakeLists.txt  README.md  bootstrap.sh  build.sh  printfc.c
.github/workflows/: cmake-ubuntu.yml  tests.yml
include/: printfc.h
tests/: test_RGB_macro.c  test_macros.c  test_main.c  test_tocolor.c
